<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simplified</string>
    <string name="title_page_detail">Page Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_draw">Draw</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="action_undo">Back</string>
    <string name="action_save">Save</string>
    <string name="pronunciation_tag">Pronounced:</string>
    <string name="tone_tag">Tone:</string>
    <string name="first_tone">1</string>
    <string name="second_tone">2</string>
    <string name="third_tone">3</string>
    <string name="fourth_tone">4</string>
    <string name="neutral_tone">Neutral</string>
    <string name="unknown_tone">\?\?</string>
    <string name="draw_button">Draw a New Character</string>
    <string name="view_char_button">View Characters</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="empty_characters_message">No characters created.\nHit + to make one.</string>
    <string name="action_add">Add</string>
    <string name="title_activity_view_chars">Characters</string>
    <string name="delete_character_dialog">Delete this character?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_toast">Deleted character</string>
    <string name="words_button">Manage Words</string>
    <string name="title_activity_edit_draw">Edit</string>
    <string name="action_revert">Revert</string>
    <string name="title_activity_create_word">New Word</string>
    <string name="select_pronunciation_message">Choose the correct pronunciation:</string>
    <string name="use">Use</string>
    <string name="view_button">View</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_view_words">Words</string>
    <string name="deleted_word_toast">Deleted Word</string>
    <string name="empty_words_message">No words created.\nHit + to make one.</string>
    <string name="meaning">Meaning:</string>
    <string name="meaning_hint">Enter meaning</string>
    <string name="no_chars_message">No characters available.</string>
    <string name="no_meaning">No meaning given.</string>
    <string name="menu">Menu</string>
    <string name="drawer_open">Menu</string>
    <string name="maxed_pronuns">Max # of pronunciations.</string>
    <string name="quit_word_dialog">Discard word?</string>
    <string name="quit_draw_dialog">Discard character?</string>
    <string name="quit_edit_dialog">Discard changes?</string>

</resources>
