<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@color/menu_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pronunciation_tag"
            android:textSize="20sp"/>
        <AutoCompleteTextView
            android:id="@+id/pronounce_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tone_tag"
        android:textSize="20sp"
    />
    <RadioGroup
        android:id="@+id/tone_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/unknown_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_tone" />
        <RadioButton
            android:id="@+id/first_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_tone"/>
        <RadioButton
            android:id="@+id/second_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_tone"/>
        <RadioButton
            android:id="@+id/third_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_tone" />
        <RadioButton
            android:id="@+id/fourth_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_tone" />
        <RadioButton
            android:id="@+id/neutral_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutral_tone" />
    </RadioGroup>

    <GridLayout
        android:id="@+id/pronunciation_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </GridLayout>
</LinearLayout>